tests/paczka1/small_fuzzy/23871877.err
Error in line 3: H0RTumqDzV A664 90,U
Error in line 1: vxKw A247 76,7
Error in line 9: vxKw S271 95,5
